content/v1.6.x/connectors/index.md
---
title: Connectors for OpenMetadata | Documentation for Setup, Ingestion & Troubleshooting
slug: /connectors
---

# Connectors

OpenMetadata can extract metadata from the following list of connectors below.

## Ingestion Deployment

To run the Ingestion via the UI you'll need to use the OpenMetadata Ingestion Container, which comes shipped with
custom Airflow plugins to handle the workflow deployment. If you want to install it manually in an already existing
Airflow host, you can follow [this](/deployment/ingestion/openmetadata) guide.

If you don't want to use the OpenMetadata Ingestion container to configure the workflows via the UI, then you can check
the following docs to run the Ingestion Framework in any orchestrator externally.

{% tilesContainer %}
{% tile
    title="Run Connectors from the OpenMetadata UI"
    description="Learn how to manage your deployment to run connectors from the UI"
    link="/deployment/ingestion/openmetadata"
  / %}
{% tile
    title="External Schedulers"
    description="Get more information about running the Ingestion Framework Externally"
    link="/deployment/ingestion/external"
  / %}
{% /tilesContainer %}

## API Services

{% partial file="/v1.6/connectors/api/connectors-list.md" /%}

## Database / DataWarehouse Services

{% partial file="/v1.6/connectors/database/connectors-list.md" /%}

## Dashboard Services

{% partial file="/v1.6/connectors/dashboard/connectors-list.md" /%}

## Messaging Services

{% partial file="/v1.6/connectors/messaging/connectors-list.md" /%}

## Pipeline Services

{% partial file="/v1.6/connectors/pipeline/connectors-list.md" /%}

## ML Model Services

{% partial file="/v1.6/connectors/ml-model/connectors-list.md" /%}

## Storage Services

{% partial file="/v1.6/connectors/storage/connectors-list.md" /%}

## Metadata Services

{% partial file="/v1.6/connectors/metadata/connectors-list.md" /%}

## Search Services

{% partial file="/v1.6/connectors/search/connectors-list.md" /%}
